<resources>
    <string name="app_name">PontOtthon</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="admode">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">AIzaSyC4-UDzNhOFTjM4qTxtUCYU-_Xsjsswplo</string>
    <!--Feliratok-->
    <string name="name">Név :</string>
    <string name="ajto">Ajto :</string>
    <string name="hsz">Házszám :</string>
    <string name="telep">Település :</string>
    <string name="irsz">Irányítószám :</string>
    <string name="emelet">Emelet :</string>
    <string name="utca">Utca :</string>
    <string name="plssingin">Kérlek jeletnkezz be!</string>
    <string name="next_from_login">Folytatod a következő felhasználóval? :</string>
    <string name="welcomeProfile">Üdvözöllek! kérlek töltsd ki a regisztráció fenmaradó részét :</string>
    <string name="welcomemainscreen">Elemeket balra húzva törlődnek!</string>
    <string name="mainBev"> E havi bevételed</string>
    <string name="mainKi"> E havi kiadásod </string>
    <string name="mainOsszeg">Havi mérleg: </string>
    <string name="problem">Ha bármi gond lenne az aplikációval írj az ewulusen@gmail.com-ra egy emailt</string>
    <string name="nev">Megnevezés</string>
    <string name="megtakaritas">Megtakaritás</string>
    <string name="osszeg">Összeg</string>
    <string name="delete">Törlés</string>
    <string name="penz">.-Ft</string>
    <string name="bevetel">Bevétel</string>
    <string name="kiadas">Kiadás</string>
    <string name="ertek">Összeg/  </string>
    <string name="betesz">Betesz</string>
    <string name="kivesz">Kivesz</string>
    <string name="kezdDate">Kezdés Dátuma</string>
    <string name="befDateDate">Befejezés Dátuma</string>
    <string name="fixItemsShow">Itt csak a fix pénzügyeid listázódnak</string>
    <string name="addErtek">Kérlek írj be egy értéket!</string>
    <string name="tulsok">Nincs ennyi megtakarításod!</string>
    <string name="hitelWelcome">Itt a hiteleidet tudod beállítani és törölni őket</string>
    <string name="hiteladded">Hitel hozzáadva!</string>
    <string name="oldcashflow">Előző havi kimutatások</string>
    <string name="honap">Hónap</string>
    <string name="valasz">--Válassz a kimutatások közül--</string>
    <!--Gombok-->
    <string name="kuldes">Küldes</string>
    <string name="tovabb">Tovább</string>
    <string name="felvetel">Hozzáad</string>
    <string name="troles">Töröl</string>
    <string name="fix">Fix minden hónapban</string>
    <string name="signinwhitgoogle">Bejelentkezés google fiókkal</string>
    <string name="signinwhitusername">Bejelentkezés felhasználónévvel</string>
    <string name="signout">Kijelentkezés</string>
    <!--Hiba üzenetek-->
    <string name="profil_hiba">Kérlek tölts ki minden mezőt</string>
    <string name="marvan">Ilyen nevű hiteled már van</string>
    <string name="title_activity_mainscreen">mainscreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
